--- a/voidfall/index.html
+++ b/voidfall/index.html
@@ -350,6 +350,7 @@
             margin: 0;
             font-size: 0.9rem;
             white-space: nowrap;
+            cursor: pointer;
         }
 
         .combat-version-arrow {
