Fix for vertical centering

--- a/voidfall/index.html
+++ b/voidfall/index.html
@@ -351,10 +351,9 @@
             font-size: 0.9rem;
             white-space: nowrap;
             cursor: pointer;
-        }
-
-        .combat-version-arrow {
-            float: right;
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
         }
 
         .winner-steps {
